<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_back"
    tools:context=".activities.ActivityConfirmation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_gravity="top"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:padding="7dp"
            android:tint="@color/black"
            android:id="@+id/clear_page"
            android:src="@drawable/ic_cancel"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/confirmation"
            android:textSize="20sp"
            android:gravity="center"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@color/text_color"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/oval_green_btn"
            android:gravity="center"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done"
                android:id="@+id/done"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_data1"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_data2"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/text_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:id="@+id/print_data"
        android:background="@drawable/round_blue_bound_no_back_btn">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_printer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/print_data"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/dark_blue"/>

    </LinearLayout>
</FrameLayout>