<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:sign="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.ActivitySignature">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="55dp"
       android:orientation="horizontal"
       android:paddingRight="10dp"
       android:paddingLeft="10dp"
       android:layout_gravity="top"
       android:background="@color/white"
       >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="@string/cancel"
           android:textSize="16sp"
           android:gravity="center"
           android:id="@+id/sign_cancel"
           android:fontFamily="@font/opensans_regular"
           android:textColor="@color/text_color"/>

       <TextView
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:text="@string/new_signature"
           android:textSize="20sp"
           android:gravity="center"
           android:fontFamily="@font/opensans_bold"
           android:textColor="@color/text_color"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="@string/done"
           android:textSize="16sp"
           android:gravity="center"
           android:id="@+id/sign_done"
           android:fontFamily="@font/opensans_regular"
           android:textColor="@color/text_color"/>

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        >

        <LinearLayout
            android:id="@+id/llCanvas"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginBottom="80dp"
            android:orientation="vertical" >
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="30dp"
        android:background="@color/white"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_cancel"
                android:padding="8dp"
                android:id="@+id/sign_cancell"
           />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:id="@+id/sign_name"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/sign_clear"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/text_color"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_here"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/text_color"/>

    </LinearLayout>
</FrameLayout>